# signald-tui

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  common.rs  main.rs  network.rs
src/event/: event.rs  key.rs  mod.rs
src/handlers/: contacthandler.rs  inputhandler.rs  mod.rs
src/signald/: mod.rs  signald.rs  signaldrequest.rs  signaldresponse.rs  signaldsocket.rs
src/ui/: mod.rs
