[package]
name = "signald-rust"
version = "0.1.0"
authors = ["angelocarly <angelo.carly@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bus = "2.2.3"
tokio = { version = "0.2.13", features = ["full", "time"] }
futures = "0.3.4"