[package]
name = "signald-tui"
version = "0.1.0"
authors = ["angelocarly <angelo.carly@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bus = "2.2.3"
crossterm = "0.17"
tokio = { version = "0.2.16", features = ["sync", "full"] }
futures = "0.3.4"
tui = { version = "0.8.0", features = ["crossterm"], default-features = false }
rand = "0.7.3"
termion = "*"
signald-rust = "0.1.4"
